test/scc/expr/semantic-errors/114.t
void test()
{
    int* a;
    const int* b;
    a = b;
}